# intents-package

./: .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
home_assistant_intents/: __init__.py  language_scores.json  languages.py
home_assistant_intents/fuzzy/: config.json
home_assistant_intents/fuzzy/en/: config.json  responses.json
home_assistant_intents/fuzzy/en/ngram/: climate_HassClimateGetTemperature.db  climate_HassClimateGetTemperature.json  climate_HassClimateSetTemperature.db  climate_HassClimateSetTemperature.json  cover_HassSetPosition.db  cover_HassSetPosition.json  cover_HassTurnOff.db  cover_HassTurnOff.json  cover_HassTurnOn.db  cover_HassTurnOn.json  fan_HassFanSetSpeed.db  fan_HassFanSetSpeed.json  fan_HassTurnOff.db  fan_HassTurnOff.json  fan_HassTurnOn.db  fan_HassTurnOn.json  homeassistant_HassGetCurrentDate.db  homeassistant_HassGetCurrentDate.json  homeassistant_HassGetCurrentTime.db  homeassistant_HassGetCurrentTime.json  homeassistant_HassNevermind.db  homeassistant_HassNevermind.json  homeassistant_HassTimerStatus.db  homeassistant_HassTimerStatus.json  homeassistant_HassTurnOff.db  homeassistant_HassTurnOff.json  homeassistant_HassTurnOn.json  lawn_mower_HassLawnMowerDock.db  lawn_mower_HassLawnMowerDock.json  lawn_mower_HassLawnMowerStartMowing.db  lawn_mower_HassLawnMowerStartMowing.json  light_HassLightSet.db  light_HassLightSet.json  light_HassTurnOff.db  light_HassTurnOff.json  light_HassTurnOn.db  light_HassTurnOn.json  (+37 more)
script/: bump-intents  format  lint  merged_output.py  package  setup  train_fuzzy.py  write_languages.py
tests/: test_intents.py
