[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "home-assistant-intents"
version     = "2025.9.3"
license     = "Apache-2.0"
description = "Intents for Home Assistant"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "intent", "recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"

[project.optional-dependencies]
dev = [
    "build==1.3.0",
    "black==25.1.0",
    "flake8==7.3.0",
    "isort==6.0.1",
    "mypy==1.17.1",
    "pylint==3.3.8",
    "pytest==8.4.1",
    "types-PyYAML==6.0.12.20250822",
]

[project.urls]
"Source Code" = "https://github.com/OHF-Voice/intents"

[tool.mypy]
pretty = true
disable_error_code = "var-annotated"

[[tool.mypy.overrides]]
module = [
    "hassil.*",
]
ignore_missing_imports = true

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["home_assistant_intents"]

[tool.setuptools.package-data]
"*" = ["LICENSE.md"]
"home_assistant_intents" = [
    "data/*.json",
    "fuzzy/*.json",
    "language_scores.json"
]
